fix image overflow on chrome

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -610,9 +610,11 @@ h3 {
   display: none;
 }
 #services .column {
-  overflow: auto;
   padding: 0;
   z-index: 1;
+}
+#services .column:nth-of-type(2) {
+  overflow: auto;
 }
 /* Style container */
 #services .controls {
